--- a/.github/workflows/build-index.yml
+++ b/.github/workflows/build-index.yml
@@ -93,7 +93,7 @@ jobs:
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add articles/index.html proposals/index.html land_parcel/index.html sea_house/index.html index.html
+          git add articles/index.html proposals/index.html land_parcel/index.html index.html 
           if git diff --cached --quiet; then
             echo "🔹 Nothing to commit"
           else
